<resources>
    <string name="backup_wallet">Backup seed</string>
    <string name="upgrade_wallet">Upgrade</string>
    <string name="app_name">Waves Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="all_accounts">All Assets</string>
    <string name="please_wait">Please wait</string>
    <string name="send_nav">Send</string>
    <string name="receive_nav">Receive</string>
    <string name="transactions_nav">Transactions</string>
    <string name="dex_nav">DEX</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="polite_no">No thanks</string>
    <string name="done">Done</string>
    <string name="YESTERDAY">Yesterday</string>
    <string name="Sell">Sell</string>
    <string name="Buy">Buy</string>
    <string name="SENT">Sent</string>
    <string name="RECEIVED">Received</string>
    <string name="MOVED">Transferred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="options_id">Wallet ID</string>
    <string name="preferences_about_title">About Us</string>
    <string name="select_currency">Select Currency</string>
    <string name="options_currency">Local Currency</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="invalid_wallet_name">Name should be longer 3 characters and contain only letters and digits</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_too_short">Password must be 8 characters or longer</string>
    <string name="invalid_guid">Invalid Wallet ID</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="change_password_new_matches_current">You can\'t use your current password as your new password</string>
    <string name="no_private_key">Cannot produce private key.</string>
    <string name="pin_4_strikes">4 failed PIN attempts. Please provide password.</string>
    <string name="pin_4_strikes_password_accepted">Password accepted. Please define new PIN.</string>
    <string name="bip38_password_entry">Please enter private key password</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="password_entry">Please enter password</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin_failed">PIN creation failed. Please try again.</string>
    <string name="pairing_failed">Pairing failed. Please try again.</string>
    <string name="enter_passcode_error_wrong_password">Wrong password</string>
    <string name="check_connectivity_exit">No connection to the Internet</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_processing">Wait…</string>
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>
    <string name="command2">Scan pairing code</string>
    <string name="command3">Enter seed manually</string>
    <string name="CREATE">CREATE NEW WALLET</string>
    <string name="LOGIN">LOGIN TO WALLET</string>
    <string name="pair_your_wallet">Import Wallet</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Chrome Lite Client via your PC or Mac at %1$s.</string>
    <string name="pair_wallet_step_2">Click Show Pairing Code to reveal a QR Code. Scan the code with your camera.</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="default_wallet_name">My WAVES Wallet</string>
    <string name="import_wallet">IMPORT WALLET</string>
    <string name="recover_funds_warning_message">You should always pair or login if you have access to your Wallet ID and password. Recovering your funds will create a new Wallet ID. Would you like to continue?</string>
    <string name="recover_funds_instructions">Enter your 15 recovery words with spaces to recover your wallet</string>
    <string name="recovery_passphrase">Recovery passphrase</string>
    <string name="invalid_recovery_phrase">Invalid recovery phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="restore_failed">Restoring wallet failed. Please try again</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_seed">Wallet Seed</string>
    <string name="wallet_enter_seed">Enter Wallet Seed</string>
    <string name="agree_terms_of_service">By creating a new wallet you agree to the</string>
    <string name="blockchain_tos">WavesPlatform Terms of Service</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="new_wallet">New Wallet</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_medium">Regular</string>
    <string name="strength_strong">Strong</string>
    <string name="strength_normal">Normal</string>
    <string name="i_understand">I Understand</string>
    <string name="wallet_notice_title">Create Wallet - Notice</string>
    <string name="wallet_notice_html"><![CDATA[
        <p>This feature involves the creation of a new account on Waves platform.</p>
        <p>The procedure consists of complex cryptographic operations that use a <b>SEED</b> (a series of random words) to create a unique address for your account.</p>
        <p>This SEED is extremely important and must be kept in safe place, since it\'s the only way to recover your account in case of lost, corrupted data or hardware failure.</p>
        <p>Your SEED will also allow you to IMPORT your account to other devices.
            <br/><br/>
            <i>NOTE: Make sure that you select the entire SEED length before keeping it. It\'s suggested to use the copy-to-clipboard button located the right side of the SEED box.</i>
        </p>
        ]]>
    </string>
    <string name="CONTINUE">Continue</string>
    <string name="SEND">SEND</string>
    <string name="total">Total</string>
    <string name="max_available">Use total available minus fee:</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="invalid_monero_payment_id">Invalid Payment ID</string>
    <string name="attachment_too_long">Attachment is too long</string>
    <string name="enter_double_encryption_pw">Please enter double encryption password</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="licenses">Licenses</string>
    <string name="email_chooser">Send e-mail…</string>
    <string name="about">Waves Wallet %1$s\n©%2$s wavesplatform.com</string>
    <string name="merchant_download">Free Merchant app</string>
    <string name="use_password">Use password</string>
    <string name="wipe_wallet">Forget wallet</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="select_units">Select BTC units</string>
    <string name="weak_password">The selected password is too weak to secure your funds. We strongly suggest you select a different one. Would you like to define a new password?</string>
    <string name="from">From</string>
    <string name="asset">Asset</string>
    <string name="to">To</string>
    <string name="issuer">Issuer</string>
    <string name="total_tokens">Total tokens</string>
    <string name="identifier">Identifier</string>
    <string name="reissuable">Reissuable</string>
    <string name="confirm_details">Confirm Payment</string>
    <string name="fee">Fee</string>
    <string name="attachment">Attachment</string>
    <string name="enter_attachment">Enter attachment</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="exit_confirm">Press back button again to exit</string>
    <string name="label_address">Your address has been imported successfully. Optionally assign a friendly display name to this address.</string>
    <string name="addresses">Assets</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="transfer">Transfer</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="not_now">Not now</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="security_centre_email_title">Check your email</string>
    <string name="security_centre_email_message">We sent an email to %1$s. Look for an email from Blockchain and click the verification link to complete your wallet setup.</string>
    <string name="backup_header">Wallet Seed</string>
    <string name="backup_explanation">For your security, Waves Wallet does not keep any passwords on file. The following 15 words seed will give you access to your funds in case you lose your password. Write it down on a piece of paper and keep it somewhere safe and secure. </string>
    <string name="backup_button_start">Start backup</string>
    <string name="backup_header_complete">Backup Complete</string>
    <string name="backup_complete_message">You can use your seed to restore your funds if you lose your password. Anyone with access to your seed can access your money so remember to keep it somewhere safe and secure.</string>
    <string name="backup_again">Backup again</string>
    <string name="backup_confirmed">Backup confirmed</string>
    <string name="backup_lost_mnemonic">Lost your 15 word recovery phrase?</string>
    <string name="my_assets">My Assets</string>
    <string name="history_sorting_week">Week</string>
    <string name="history_sorting_month">Month</string>
    <string name="history_sorting_half_year">Half-year</string>
    <string name="history_sorting_period">Period</string>
    <string name="history_sorting_display_spam">Display spam transactions</string>
    <string name="history_sorting_close">Close</string>
    <string name="history_sorting_filter">Filter</string>
    <string name="alias_dialog_create_alias">Create new alias</string>
    <string name="alias_dialog_you_dont_have">You do not have Aliases</string>
    <string name="alias_dialog_description_1">An Alias is a nickname for your address. You can use an Alias instead of an address to make transactions.</string>
    <string name="alias_dialog_description_2">Your Alias must be between 4 and 30 characters long, and must contain only lowercase Latin letters, digits and symbols (@, -, _ etc)</string>
    <string name="dialog_account_first_open_title">Done! Let’s review.</string>
    <string name="dialog_account_first_open_subtitle">Waves is different — it cannot be held safely by a bank or web service</string>
    <string name="dialog_account_first_open_about_fund_on_device">I understand that my funds are held securely on this device, not by a company</string>
    <string name="dialog_account_first_open_about_backup">I understand that if this app is moved to another device or deleted, my Waves can only be recovered with the backup phrase</string>
    <string name="dialog_account_first_open_about_terms">I have read, understood, and agree to the\nTerms of Use</string>
    <string name="dialog_account_first_open_confirm_and_begin">Confirm and Begin</string>
</resources>