<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/submenu_1">

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/bad_backup"
            android:title="@string/backup_wallet" />

        <item
            android:id="@+id/nav_addresses"
            android:icon="@drawable/ic_assets"
            android:title="@string/my_assets" />

    </group>

    <group android:id="@+id/submenu_2">

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_help_grey600_24dp"
            android:title="@string/support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout" />

    </group>

    <group android:id="@+id/submenu_3">

        <item
            android:id="@+id/action_spam_filter"
            android:title="@string/spam_filter_enable"
            app:actionLayout="@layout/layout_action_spam_filter"
            />

    </group>

</menu>