<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blockchain_pearl_white"
        android:orientation="vertical"
        android:padding="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_header_complete"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/subheading_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blockchain_grey"
                    android:textSize="12sp"
                    tools:text="Last backup: Sept 08, 2016" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/round_view_green_dark"
                android:contentDescription="@string/backup_confirmed"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_done_white_48dp" />

        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_complete_message" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/backup_lost_mnemonic"
            android:textColor="@color/blockchain_grey"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_backup_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/backup_again"
            android:theme="@style/ButtonBlue" />
    </LinearLayout>

</layout>