<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingTop="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true"
        android:text="@string/history_sorting_period"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="14dp">

        <CheckBox
            android:id="@+id/checkbox_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/period_selector"
            android:button="@null"
            android:drawableLeft="@drawable/selector_circle_checkbox"
            android:drawablePadding="8dp"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="14dp"
            android:paddingTop="12dp"
            android:text="@string/history_sorting_week" />

        <CheckBox
            android:id="@+id/checkbox_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/period_selector"
            android:button="@null"
            android:drawableLeft="@drawable/selector_circle_checkbox"
            android:drawablePadding="8dp"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="14dp"
            android:paddingTop="12dp"
            android:text="@string/history_sorting_month" />

        <CheckBox
            android:id="@+id/checkbox_half_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/period_selector"
            android:button="@null"
            android:drawableLeft="@drawable/selector_circle_checkbox"
            android:drawablePadding="8dp"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="14dp"
            android:paddingTop="12dp"
            android:text="@string/history_sorting_half_year" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/_24sdp"
        android:singleLine="true"
        android:text="@string/addresses"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/_24sdp"
        android:singleLine="true"
        android:text="@string/transfer"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/btn_gray_selector"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@null"
            android:text="@string/history_sorting_close"
            android:textAllCaps="false"
            android:textColor="@color/basic500"
            android:textSize="12sp" />


        <Button
            android:id="@+id/button_filter"
            style="@style/WavesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:text="@string/history_sorting_filter"
            android:textStyle="bold"
            android:visibility="gone" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/accent50" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/history_sorting_display_spam"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/switch_display_spam_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />


    </FrameLayout>

</LinearLayout>