<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_startlease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ic_t_alias_48" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        android:text="@string/alias_dialog_you_dont_have"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_medium" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/alias_dialog_description_1"
        android:textColor="@color/disabled500"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/alias_dialog_description_2"
        android:textColor="@color/disabled500"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_create_alias"
        style="@style/WavesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/alias_dialog_create_alias" />

    <include
        android:id="@+id/view_commission"
        layout="@layout/view_commission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

</LinearLayout>