<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/PasswordChangeDialogEditTextLayout"
            android:layout_marginTop="24dp">

            <TextView
                style="@style/PasswordChangeDialogFieldLabel"
                android:text="@string/current_password" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/current_password"
                style="@style/PasswordChangeDialogEditText">

                <requestFocus />
            </android.support.v7.widget.AppCompatEditText>
        </LinearLayout>

        <LinearLayout style="@style/PasswordChangeDialogEditTextLayout">

            <TextView
                style="@style/PasswordChangeDialogFieldLabel"
                android:text="@string/new_password" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/new_password"
                style="@style/PasswordChangeDialogEditText" />
        </LinearLayout>

        <include layout="@layout/include_entropy_meter" />

        <LinearLayout style="@style/PasswordChangeDialogEditTextLayout">

            <TextView
                style="@style/PasswordChangeDialogFieldLabel"
                android:text="@string/confirm_password" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/confirm_password"
                style="@style/PasswordChangeDialogEditText" />
        </LinearLayout>
    </LinearLayout>
</layout>