<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blockchain_blue">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:tint="@color/white"
            tools:src="@drawable/bad_backup" />
    </FrameLayout>

    <!-- Main content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:text="@string/security_centre_email_title" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/message"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/security_centre_email_message" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-6dp"
            android:layout_marginTop="8dp"
            android:text="@string/dont_ask_again"
            android:visibility="gone" />

    </LinearLayout>

    <!-- Button Layout -->
    <LinearLayout style="@style/CustomDialogButtonContainer">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_negative"
            style="@style/CustomDialogButton"
            android:layout_gravity="right"
            android:text="@string/not_now"
            android:textColor="@color/blockchain_grey"
            android:visibility="gone"
            tools:visibility="visible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_positive"
            style="@style/CustomDialogButton"
            android:layout_gravity="right"
            android:textColor="@color/blockchain_blue"
            tools:text="@android:string/ok" />

    </LinearLayout>
</LinearLayout>